# HyPyPCookBook

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  contributing.md  pyproject.toml
.github/workflows/: deploy.yml
book/: index.md  myst.yml
book/_build/site/: config.json  myst.search.json  myst.xref.json  objects.inv
book/_build/site/content/: fnirs-getting-started.json  getting-started.json  hypyp-tutorial.json  index.json
book/_build/site/public/: hypyp-tutorial-365e942e8bcbf3a30aa372e10423fbd2.md  index-0a09309dd852ab40ed4baf072a45ade2.md  index-1ab404c207553fe4c4d2860bf1757fd8.md  index-2965a3d5e7ff690431e09fdf8053bad3.md  index-bc6902232803fe2eb90c96b7b91fd9a8.md
